--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,1 +1,18 @@
-<p>post-page works!</p>
+<div class="post">
+    <div class="header">
+        <h1>Post title</h1>
+
+        <button routerLink="/"
+                class="btn btn-link"
+        >Main Page</button>
+    </div>
+
+    <div class="info">
+        <strong>Author</strong>
+        <small>12.09.2020</small>
+    </div>
+
+    <div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, eius, tempora. Consequatur culpa deserunt dicta dolores exercitationem libero, officiis pariatur quae tempore velit? Aliquam, aperiam autem consectetur consequuntur corporis doloribus dolorum ea est, eveniet, iste laboriosam magni numquam obcaecati optio pariatur perferendis possimus praesentium quas quidem reiciendis rem reprehenderit saepe.</p>
+    </div>
+</div>
