finished project and deploy

--- a/src/app/shared/components/post/post.component.html
+++ b/src/app/shared/components/post/post.component.html
@@ -9,5 +9,5 @@
     <button
             [routerLink]="['/post', post.id]"
             class="btn btn-dark"
-    >Open</button>
+    >Открыть</button>
 </div>
