--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -5,15 +5,17 @@
 
             <button routerLink="/"
                     class="btn btn-link"
-            >Main Page</button>
+            >На главную</button>
         </div>
 
         <div class="info">
             <strong>{{ post.author }}</strong>
-            <small>{{ post.date | date:'long':null:'ru'}}</small>
+            <small>{{ post.date | date:'medium'}}</small>
+
         </div>
             <quill-view-html [content]="post.text"></quill-view-html>
         <div>
+
         </div>
     </div>
 </div>
